<resources>
    <string name="app_name">Udacity App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="placeholder_toast">Not implemented yet!</string>
</resources>
