<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.udacity.czziemba.udacityappportfolio.AppPortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/my_nanodegree_apps" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/popular_movies_btn"
            android:text="@string/popular_movies"
            style="@style/portfolio_btn" />

        <Button
            android:id="@+id/stock_hawk_btn"
            android:text="@string/stock_hawk"
            style="@style/portfolio_btn" />

        <Button
            android:id="@+id/build_it_bigger_btn"
            android:text="@string/build_it_bigger"
            style="@style/portfolio_btn" />

        <Button
            android:id="@+id/make_your_app_material_btn"
            android:text="@string/make_your_app_material"
            style="@style/portfolio_btn" />

        <Button
            android:id="@+id/go_ubiquitous_btn"
            android:text="@string/go_ubiquitous"
            style="@style/portfolio_btn" />

        <Button
            android:id="@+id/capstone_btn"
            android:text="@string/capstone"
            style="@style/portfolio_btn" />

    </LinearLayout>

</LinearLayout>
